# acceleration_firmware_jetson_nano

./: ARTIFACTS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cmake/: colcon_ignore.cmake  firmware_setup.cmake  generate_mixin.cmake  sdk.cmake  sysroot.cmake
scripts/: index.yaml.template  jetson_nano.mixin.template
