<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>acceleration_firmware_jetson_nano</name>
  <version>0.1.0</version>
  <description>
    Firmware artifacts for the NVIDIA Jetson Nano board meant to accelerate ROS 2 robotic applications.
  </description>
  <maintainer email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</maintainer>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral Vilches</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
